Add TheCut Link to Shop Page

--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -48,6 +48,9 @@
         <div class="calendly-inline-widget" data-url="https://calendly.com/s-crawengr" style="min-width:320px;height:630px;"></div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
         <!-- Calendly inline widget end -->
+
+        <!-- Book Via App -->
+        <button><a href="http://book.thecut.co/CarlDTheBarber37">Book Via The Cut</a></button>
     </section>
     
     <!-- Footer -->
