Remove Twitter Add Insta Link

--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -98,9 +98,8 @@
         </p>
     
         <ul class="socials">
-            <li><a href=""><img src="../assets/instagram.png" alt="instagram"></a></li>
-            <li><a href=""><img src="../assets/twitter.png" alt="twitter"></a></li>
-            <li><a href=""><img src="../assets/facebook.png" alt="facebook"></a></li>
+          <li><a href="https://www.instagram.com/mrtrendsinc/"><img src="../assets/instagram.png" alt="instagram"></a></li>
+          <li><a href="https://www.facebook.com/trendsinckck"><img src="../assets/facebook.png" alt="facebook"></a></li>
         </ul>
     
         <p class="attribution">Images and Icons By: <br>
