Add Small Tablet Sizes

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         </form>
         
             <ul>
-                <li>(913) 940-0437</li>
-                <li>7080 N. Oak Trwy, Gladstone</li>
+                <li style="color: var(--pop2); font-weight: 500;">(913) 940-0437</li>
+                <li style="color: var(--pop2); font-weight: 500;">7080 N. Oak Trwy, Gladstone</li>
             </ul>
         
     </section>
@@ -187,3 +187,43 @@
 </body>
 
 </html>
+
+<style>
+
+    /* Small Tablet Styles */
+
+    @media screen and (min-width: 600px) {
+        #header {
+            height: 29rem;
+        }
+
+        .slogan {
+            font-size: 23px;
+        }
+
+        #about {
+            padding: 1rem;
+        }
+
+        #services {
+            padding: 5rem;
+        }
+
+        #podcast {
+            padding: 5rem;
+        }
+
+        #contact {
+            padding: 5rem;
+        }
+
+        #legal {
+            text-align: center;
+        }
+
+        .attribution {
+            display: flex;
+            justify-content: center;
+        }
+    }
+</style>
