Add small Tablet Styles to Each Business Site

--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -80,3 +80,16 @@
     </footer>
 </body>
 </html>
+
+<style>
+    @media screen and (min-width: 600px) {
+        #booking {
+          margin: 4rem 2rem;
+        } 
+        
+        #booking h3 {
+          font-size: 23px;
+          padding: 2rem;
+        }
+    }
+  </style>
