Add Mock Stripe Payments

--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -52,40 +52,51 @@
         <h3>Featured Products</h3>
 
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner" style="width: 360px; margin: auto;">
+          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../assets/incncologo.png" class="d-block w-100" alt="Shop Item">
-                <div class="carousel-caption  d-md-block">
-                  <h5>KC Hoodie</h5>
+                <div class="card" style="width: 20rem;">
+                  <img class="card-img-top" src="../assets/incncologo.png" alt="Card image cap" style="height: 20rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">Trends Umbrella Hoodie</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">$50.00</h6>
+                    <a href="https://buy.stripe.com/test_7sIg2AgeB0C1c6sfYZ" class="btn btn-dark">Purchase</a>
+                  </div>
                 </div>
               </div>
-              <div class="carousel-item" style="width: 360px; margin: auto;">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
+              <!-- <div class="carousel-item">
+                <div class="card" style="width: 20rem;">
+                  <img class="card-img-top" src="#" alt="Card image cap" style="height: 20rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">Trends Umbrella Hoodie</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">$50.00</h6>
+                    <a href="https://buy.stripe.com/test_7sIg2AgeB0C1c6sfYZ" class="btn btn-dark">Purchase</a>
+                  </div>
                 </div>
               </div>
-              <div class="carousel-item" style="width: 360px; margin: auto;">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
+              <div class="carousel-item">
+                <div class="card" style="width: 20rem;">
+                  <img class="card-img-top" src="#" alt="Card image cap" style="height: 20rem;">
+                  <div class="card-body">
+                    <h5 class="card-title">Trends Umbrella Hoodie</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">$50.00</h6>
+                    <a href="https://buy.stripe.com/test_7sIg2AgeB0C1c6sfYZ" class="btn btn-dark">Purchase</a>
+                  </div>
                 </div>
-              </div>
+              </div> -->
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
           </div>
+             <a class="carousel-control-prev" role="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="">Previous</span>
+             </a>
+            <a class="carousel-control-next" role="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="">Next</span>
+            </a> 
+          </div>
+
+                
     </section>
         
     <!-- Footer -->
