--- a/pages/barbershop.html
+++ b/pages/barbershop.html
@@ -94,4 +94,26 @@
           padding: 2rem;
         }
     }
+
+    @media screen and (min-width: 1000px) {
+        #booking {
+          margin: 4rem 6rem;
+        } 
+        
+        #booking h3 {
+          font-size: 27px;
+          padding: 2rem;
+        }
+    }
+
+    @media screen and (min-width: 1200px) {
+        #booking {
+          margin: 4rem 8rem;
+        } 
+        
+        #booking h3 {
+          font-size: 29px;
+          padding: 2rem;
+        }
+    }
   </style>
