--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -139,4 +139,26 @@
         padding: 2rem;
       }
   }
+
+  @media screen and (min-width: 1000px) {
+      #shop {
+        margin: 4rem 6rem;
+      } 
+      
+      #shop h3 {
+        font-size: 27px;
+        padding: 2rem;
+      }
+  }
+
+  @media screen and (min-width: 1200px) {
+        #shop {
+          margin: 4rem 8rem;
+        } 
+        
+        #shop h3 {
+          font-size: 29px;
+          padding: 2rem;
+        }
+    }
 </style>
