--- a/pages/newsletter.html
+++ b/pages/newsletter.html
@@ -95,4 +95,15 @@
         border: 1px solid gray;
     }
 
+    @media screen and (min-width: 800px) {
+        .header h1 {
+            font-size: 27px;
+        }
+        
+        .news {
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+    }
+
 </style>
