--- a/pages/directory.html
+++ b/pages/directory.html
@@ -119,6 +119,8 @@
     #legal {
         position: fixed;
         bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
     }
 </style>
 
