--- a/pages/clothing.html
+++ b/pages/clothing.html
@@ -57,7 +57,7 @@
               <div class="carousel-item active">
                 <div class="card" style="width: 20rem;">
                   <img class="card-img-top" src="../assets/incncologo.png" alt="Card image cap" style="height: 20rem;">
-                  <div class="card-body">
+                  <div class="card-body text-dark" style="background-color: white; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
                     <h5 class="card-title">Trends Umbrella Hoodie</h5>
                     <h6 class="card-subtitle mb-2 text-muted">$50.00</h6>
                     <a href="https://buy.stripe.com/test_7sIg2AgeB0C1c6sfYZ" class="btn btn-dark">Purchase</a>
