--- a/pages/foundation.html
+++ b/pages/foundation.html
@@ -83,6 +83,8 @@
             <input type="tel" name="number" id="number" placeholder="Phone Number" required>
             <input type="email" name="email" id="email" placeholder="Email Address" required>
             <button type="submit" style="width: 50%; margin: 0 auto;">Join</button>
+            <p>Or</p>
+            <button style="width: 50%; margin: 0 auto;"><a href="https://buy.stripe.com/test_fZecQo7I50C1daw6oq">Donate</a></button>
         </form>
     </section>
 
@@ -108,9 +110,19 @@
                 title="homepage icons">Uniconlabs - Flaticon</a><br><a href="https://www.flaticon.com/free-icons/"
                 title="instagram icons">Freepik
                 -
-                Flaticon</a></p>
+                Flaticon</a>
+        </p>
 
     </footer>
 </body>
 
 </html>
+
+<style>
+    @media screen and (min-width: 1000px) {
+        #donate {
+            max-width: 600px;
+            margin: 0 auto;
+        }
+    }
+</style>
